--- a/Madagascar/app/src/main/AndroidManifest.xml
+++ b/Madagascar/app/src/main/AndroidManifest.xml
@@ -1,17 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.madagascar">
+    package="com.example.asus.madagascar">
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:label="MADAGASCAR"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Madagascar">
-        <activity
-            android:name=".MainActivity"
-            android:exported="true">
+        android:theme="@style/AppTheme">
+        <activity android:name=".view.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
